crates/codegraph/tests/snapshots/generate_tests__repo_child_tables.snap
---
source: crates/codegraph/tests/generate_tests.rs
expression: code
---
//! Generated repository implementation for Candidate.
//! DO NOT EDIT — generated by codegraph.

use async_trait::async_trait;
use sea_orm::{
    ActiveModelTrait, ColumnTrait, ConnectionTrait, DatabaseTransaction, EntityTrait, PaginatorTrait, QueryFilter, QueryOrder, Set, DatabaseBackend, Statement,
};
use uuid::Uuid;

use super::repository::CandidateRepository;
use super::dto_create::CreateCandidateRequest;
use super::dto_update::UpdateCandidateRequest;
use super::dto_response::CandidateResponse;
use super::dto_response::CandidatePersonNameResponse;

pub struct CandidateRepositoryImpl;

#[async_trait]
impl CandidateRepository for CandidateRepositoryImpl {
    #[tracing::instrument(skip(self, tx), fields(db.operation = "insert", db.table = "recruiting.candidate"))]
    async fn create(
        &self,
        tx: &DatabaseTransaction,
        cmd: CreateCandidateRequest,
    ) -> Result<Uuid, Box<dyn std::error::Error>> {
        let id = Uuid::new_v4();

        // Insert into recruiting.candidate (direct columns)
        let model = crate::entity::recruiting_candidate::ActiveModel {
            id: Set(id),
            ..Default::default()
        };
        model.insert(tx).await?;

        // Insert child rows: recruiting.candidate_person_name
        for item in &cmd.person_name {
            let child_id_candidate_person_name = Uuid::new_v4();
            let stmt = Statement::from_sql_and_values(
                DatabaseBackend::Postgres,
                "INSERT INTO recruiting.candidate_person_name (id, candidate_id, first_name, last_name) VALUES ($1, $2, $3, $4)",
                vec![child_id_candidate_person_name.into(), id.into(), sea_orm::Value::String(Some(Box::new(item.first_name.clone()))), item.last_name.clone().map(|v| sea_orm::Value::String(Some(Box::new(v)))).unwrap_or(sea_orm::Value::String(None))],
            );
            tx.execute(stmt).await?;
        }

        Ok(id)
    }

    #[tracing::instrument(skip(self, db), fields(db.operation = "select", db.table = "recruiting.candidate"))]
    async fn find_by_id(
        &self,
        db: &DatabaseTransaction,
        id: Uuid,
        include_deleted: bool,
    ) -> Result<Option<CandidateResponse>, Box<dyn std::error::Error>> {
        let mut query = crate::entity::recruiting_candidate::Entity::find()
            .filter(crate::entity::recruiting_candidate::Column::Id.eq(id));

        if !include_deleted {
            query = query.filter(crate::entity::recruiting_candidate::Column::DeletedAt.is_null());
        }

        let row = query.one(db)
            .await?;

        let row = match row {
            Some(r) => r,
            None => return Ok(None),
        };

        let person_name_rows = {
            let stmt = Statement::from_sql_and_values(
                DatabaseBackend::Postgres,
                "SELECT id, first_name, last_name FROM recruiting.candidate_person_name WHERE candidate_id = $1 ORDER BY created_at",
                vec![id.into()],
            );
            let rows = db.query_all(stmt).await?;
            let mut items = Vec::with_capacity(rows.len());
            for child_row in &rows {
                use sea_orm::TryGetable;
                items.push(CandidatePersonNameResponse {
                    first_name: String::try_get_by(child_row, "first_name").map_err(|e| format!("{e:?}"))?,
                    last_name: Option::<String>::try_get_by(child_row, "last_name").ok().flatten(),
                });
            }
            items
        };

        Ok(Some(CandidateResponse {
            id: row.id,
            person_name: person_name_rows,
            workflow_state: None,
            created_at: row.created_at,
            updated_at: row.updated_at,
        }))
    }

    #[tracing::instrument(skip(self, tx), fields(db.operation = "update", db.table = "recruiting.candidate"))]
    async fn update(
        &self,
        tx: &DatabaseTransaction,
        id: Uuid,
        cmd: UpdateCandidateRequest,
    ) -> Result<(), Box<dyn std::error::Error>> {
        // Update recruiting.candidate — only set fields present in the update request
        let model = crate::entity::recruiting_candidate::ActiveModel {
            id: Set(id),
            ..Default::default()
        };
        match model.update(tx).await {
            Ok(_) => {}
            Err(sea_orm::DbErr::RecordNotUpdated) => { /* RLS hid the row — find_by_id will return 404 */ }
            Err(e) => return Err(e.into()),
        }

        // Replace child rows: recruiting.candidate_person_name
        if let Some(ref items) = cmd.person_name {
            let del = Statement::from_sql_and_values(DatabaseBackend::Postgres, "DELETE FROM recruiting.candidate_person_name WHERE candidate_id = $1", vec![id.into()]);
            tx.execute(del).await?;
            for item in items {
                let child_id = Uuid::new_v4();
                let stmt = Statement::from_sql_and_values(
                    DatabaseBackend::Postgres,
                    "INSERT INTO recruiting.candidate_person_name (id, candidate_id, first_name, last_name) VALUES ($1, $2, $3, $4)",
                    vec![child_id.into(), id.into(), sea_orm::Value::String(Some(Box::new(item.first_name.clone()))), item.last_name.clone().map(|v| sea_orm::Value::String(Some(Box::new(v)))).unwrap_or(sea_orm::Value::String(None))],
                );
                tx.execute(stmt).await?;
            }
        }

        Ok(())
    }

    #[tracing::instrument(skip(self, db), fields(db.operation = "select_list", db.table = "recruiting.candidate"))]
    async fn list(
        &self,
        db: &DatabaseTransaction,
        page: u64,
        page_size: u64,
        filters: &std::collections::HashMap<String, String>,
    ) -> Result<(Vec<CandidateResponse>, u64), Box<dyn std::error::Error>> {
        let query = crate::entity::recruiting_candidate::Entity::find()
            .filter(crate::entity::recruiting_candidate::Column::DeletedAt.is_null())
            .order_by_desc(crate::entity::recruiting_candidate::Column::CreatedAt);
        let paginator = query.paginate(db, page_size);

        let total = paginator.num_items().await?;
        let rows = paginator.fetch_page(page).await?;

        let mut results = Vec::with_capacity(rows.len());
        for row in rows {

            let person_name_rows = {
                let stmt = Statement::from_sql_and_values(
                    DatabaseBackend::Postgres,
                    "SELECT id, first_name, last_name FROM recruiting.candidate_person_name WHERE candidate_id = $1 ORDER BY created_at",
                    vec![row.id.into()],
                );
                let rows = db.query_all(stmt).await?;
                let mut items = Vec::with_capacity(rows.len());
                for child_row in &rows {
                    use sea_orm::TryGetable;
                    items.push(CandidatePersonNameResponse {
                        first_name: String::try_get_by(child_row, "first_name").map_err(|e| format!("{e:?}"))?,
                        last_name: Option::<String>::try_get_by(child_row, "last_name").ok().flatten(),
                    });
                }
                items
            };
            results.push(CandidateResponse {
                id: row.id,
                person_name: person_name_rows,
                workflow_state: None,
                created_at: row.created_at,
                updated_at: row.updated_at,
            });
        }

        Ok((results, total))
    }
}
