crates/codegraph/tests/snapshots/generate_tests__repo_codelist_columns.snap
---
source: crates/codegraph/tests/generate_tests.rs
expression: code
---
//! Generated repository implementation for Candidate.
//! DO NOT EDIT — generated by codegraph.

use async_trait::async_trait;
use sea_orm::{
    ActiveModelTrait, ColumnTrait, DatabaseTransaction, EntityTrait, PaginatorTrait, QueryFilter, QueryOrder, Set,
};
use uuid::Uuid;

use super::repository::CandidateRepository;
use super::dto_create::CreateCandidateRequest;
use super::dto_update::UpdateCandidateRequest;
use super::dto_response::CandidateResponse;

pub struct CandidateRepositoryImpl;

#[async_trait]
impl CandidateRepository<sea_orm::DatabaseTransaction> for CandidateRepositoryImpl {
    #[tracing::instrument(skip(self, tx), fields(db.operation = "insert", db.table = "recruiting.candidate"))]
    async fn create(
        &self,
        tx: &DatabaseTransaction,
        cmd: CreateCandidateRequest,
    ) -> Result<Uuid, Box<dyn std::error::Error>> {
        let id = Uuid::new_v4();

        // Insert into recruiting.candidate (direct columns)
        let model = crate::entity::recruiting_candidate::ActiveModel {
            id: Set(id),
            gender_code: Set(cmd.gender_code.to_string()),
            currency_code: Set(cmd.currency_code.map(|v| v.to_string())),
            ..Default::default()
        };
        model.insert(tx).await?;

        Ok(id)
    }

    #[tracing::instrument(skip(self, db), fields(db.operation = "select", db.table = "recruiting.candidate"))]
    async fn find_by_id(
        &self,
        db: &DatabaseTransaction,
        id: Uuid,
        include_deleted: bool,
    ) -> Result<Option<CandidateResponse>, Box<dyn std::error::Error>> {
        let mut query = crate::entity::recruiting_candidate::Entity::find()
            .filter(crate::entity::recruiting_candidate::Column::Id.eq(id));

        if !include_deleted {
            query = query.filter(crate::entity::recruiting_candidate::Column::DeletedAt.is_null());
        }

        let row = query.one(db)
            .await?;

        let row = match row {
            Some(r) => r,
            None => return Ok(None),
        };

        Ok(Some(CandidateResponse {
            id: row.id,
            gender_code: row.gender_code.parse().unwrap_or_default(),
            currency_code: row.currency_code.and_then(|v| v.parse().ok()),
            workflow_state: None,
            created_at: row.created_at,
            updated_at: row.updated_at,
            ..Default::default()
        }))
    }

    #[tracing::instrument(skip(self, tx), fields(db.operation = "update", db.table = "recruiting.candidate"))]
    async fn update(
        &self,
        tx: &DatabaseTransaction,
        id: Uuid,
        cmd: UpdateCandidateRequest,
    ) -> Result<(), Box<dyn std::error::Error>> {
        // Update recruiting.candidate — only set fields present in the update request
        let mut model = crate::entity::recruiting_candidate::ActiveModel {
            id: Set(id),
            ..Default::default()
        };
        if let Some(v) = cmd.gender_code { model.gender_code = Set(v.to_string()); }
        if let Some(v) = cmd.currency_code { model.currency_code = Set(Some(v.to_string())); }
        match model.update(tx).await {
            Ok(_) => {}
            Err(sea_orm::DbErr::RecordNotUpdated) => { /* RLS hid the row — find_by_id will return 404 */ }
            Err(e) => return Err(e.into()),
        }

        Ok(())
    }

    #[tracing::instrument(skip(self, db), fields(db.operation = "select_list", db.table = "recruiting.candidate"))]
    async fn list(
        &self,
        db: &DatabaseTransaction,
        page: u64,
        page_size: u64,
        filters: &std::collections::HashMap<String, String>,
        include_deleted: bool,
    ) -> Result<(Vec<CandidateResponse>, u64), Box<dyn std::error::Error>> {
        let mut condition = sea_orm::Condition::all();
        if let Some(val) = filters.get("currency_code") {
            condition = condition.add(crate::entity::recruiting_candidate::Column::CurrencyCode.eq(val.clone()));
        }
        if let Some(val) = filters.get("gender_code") {
            condition = condition.add(crate::entity::recruiting_candidate::Column::GenderCode.eq(val.clone()));
        }
        let mut query = crate::entity::recruiting_candidate::Entity::find()
            .filter(condition);
        if !include_deleted {
            query = query.filter(crate::entity::recruiting_candidate::Column::DeletedAt.is_null());
        }
        let query = query.order_by_desc(crate::entity::recruiting_candidate::Column::CreatedAt);
        let paginator = query.paginate(db, page_size);

        let total = paginator.num_items().await?;
        let rows = paginator.fetch_page(page).await?;

        let mut results = Vec::with_capacity(rows.len());
        for row in rows {
            results.push(CandidateResponse {
                id: row.id,
                gender_code: row.gender_code.parse().unwrap_or_default(),
                currency_code: row.currency_code.and_then(|v| v.parse().ok()),
                workflow_state: None,
                created_at: row.created_at,
                updated_at: row.updated_at,
                ..Default::default()
            });
        }

        Ok((results, total))
    }
}
